# qwikpage

./: .gitignore  README.md  build-admin.sh  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/admin/: index.html
src-tauri/assets/admin/assets/: 403-CAO2jIQL.js  403-DIY2k1vY.js  403-DR8XBFSf.js  403-DR8XBFSf.js.map  404-0tlvPNLi.js  404-BLZy4G_x.js  404-CN4eajEX.js  404-CN4eajEX.js.map  500-Ba1ZDwao.js  500-Ba1ZDwao.js.map  500-COn7hwtz.js  500-DhUtkwjm.js  AuthButton-BAPOJ_KH.js  AuthButton-BAPOJ_KH.js.map  AuthButton-D2lR91kK.js  AuthButton-DsKFB5wh.js  Avatar-CjdTfeDX.js  Avatar-CjdTfeDX.js.map  Avatar-Y9NAw_Pi.js  Avatar-sa42xjIc.js  BarChart-1CYpq4uI.js  BarChart-BylXIgyA.js  BarChart-CvJuSXRn.js  BarChart-CvJuSXRn.js.map  Button-BUuwV9vJ.js  Button-CxZoaohN.js  Button-CxZoaohN.js.map  Button-oxcq2uoY.js  Card-CN3JrcjO.js  Card-CeevDPem.js  Card-DN9GQToD.js  Card-DN9GQToD.js.map  Carousel-CFKWyymj.js  Carousel-ChxAIE0b.js  Carousel-Ciri-rKj.js  Carousel-Ciri-rKj.js.map  Cascader-3yGQaEuR.js  (+304 more)
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/cmd/: menu.rs  mod.rs  page.rs  project.rs
src-tauri/src/commands/: dsl.rs  menu.rs  mod.rs  page.rs  project.rs
src-tauri/src/core/: cmd.rs  mod.rs  page.rs  project.rs
src-tauri/src/models/: menu.rs  mod.rs  page.rs  project.rs  result.rs
src-tauri/src/services/: demo.rs  mod.rs  preview.rs
src-tauri/src/types/: menu.rs  mod.rs  page.rs  project.rs
src-tauri/src/utils/: constans.rs  dirs.rs  help.rs  init.rs  mod.rs  setup.rs  winreg.rs
(+3 files in other folders)
