[package]
name = "qwikepage"
version = "0.0.0"
description = "Qwikpage Desktop Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
log = "0.4.21"
dunce = "1.0.4"                                                                            # for cross platform path normalization
anyhow = "1.0"
convert_case = "0.6.0"
once_cell = "1.19.0"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
open = "5.0.1"
rocket = { version = "0.5.1", features = ["json"] }
async-trait = "0.1.85"

# Algorithms
uuid = { version = "1.11.0", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

